tests/resource/valid/control_flow/for_over_collection_of_tuple.mamba
def b := {(1, 4), (2, 5)}
for (first, second) in b do print first + second
