tests/resource/invalid/type/control_flow/for_over_union_one_not_minus.mamba
def x: {Range, String} := "MyString"

for i in x do
    print(i - 1)
